--- a/src/main/webapp/WEB-INF/views/thymeleaf/comunidad.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/comunidad.html
@@ -10,6 +10,9 @@
     <!--bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 
+    <!--google-icons-->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
     <!--google-fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -17,43 +20,34 @@
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
 
     <style>
-       .subir {
-           position: fixed;
-           bottom: 20px;
-           right: 20px;
-           padding: 10px; /* Padding para el contenedor */
-           margin: 0; /* Margin para el contenedor */
-           z-index: 1000; /* Asegura que esté por encima de otros elementos */
-           background-color: rgba(255, 255, 255, 0.8); /* Fondo con un poco de transparencia */
-           border-radius: 8px; /* Bordes redondeados */
-           box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Sombra ligera */
-       }
         .post-card {
-            max-width: 720px;
-            margin: 0 auto;
-            border: 1px solid #ddd;
-            border-radius: 10px;
-            overflow: hidden;
+            background-color: #fff;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }
-        .post-image {
-            width: 100%;
-            height: auto;
-        }
-        .post-content {
-            padding: 15px;
-        }
-        .post-header {
-            display: flex;
-            align-items: center;
-            padding: 15px;
-            border-bottom: 1px solid #ddd;
-        }
+
         .post-header img {
             border-radius: 50%;
-            margin-right: 10px;
         }
-        .post-actions {
-            margin-top: 10px;
+
+        .post-responses {
+            max-height: 240px;
+            overflow-y: auto;
+        }
+
+        .response img {
+            border-radius: 50%;
+        }
+
+        .response {
+            background-color: #f8f9fa;
+        }
+
+        .icon-like {
+            color: gray;
+        }
+
+        .icon-like.active {
+            color: orange;
         }
     </style>
 
@@ -78,44 +72,119 @@
         </div>
     </div>
 
+    <div class="offcanvas offcanvas-start text-bg-dark" id="subirPublicacion">
+        <div class="offcanvas-header my-2 mx-2">
+            <h3 class="fw-bold">Subir Publicacion</h3>
+            <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas"></button>
+        </div>
+        <div class="offcanvas-body">
+            <form class="p-5" th:action="@{/guardarPublicacion}" method="POST" enctype="multipart/form-data" th:object="${nuevaPublicacion}">
+                <div class="form-floating mb-3">
+                    <input class="form-control" type="text" name="titulo" id="titulo" placeholder="Ingresar Titulo" required>
+                    <label for="titulo" class="text-muted">Ingresar Titulo</label>
+                </div>
+                <div class="form-floating mb-3">
+                    <input class="form-control" type="text" name="contenido" id="contenido" placeholder="Ingresar Texto" required>
+                    <label for="contenido" class="text-muted">Ingresar Contenido</label>
+                </div>
+                <div class="mb-3">
+                    <label class="form-label fw-bold" for="foto">Cargar Imagen</label>
+                    <input class="form-control form-contrl-sm" type="file" name="imagen" id="imagen">
+                </div>   
+                <div class="mb-2 d-flex justify-content-center align-items-center">
+                    <input class="btn btn-success btn-lg" type="submit" name="subir" id="subir" value="Subir">
+                </div>
+
+                <div class="d-flex justify-content-center">
+                    <div class="alert alert-warning alert-dismissible fade show" th:if="${error != null}">
+                        <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
+                        <span th:text="${error}"></span>
+                    </div>
+                </div>
+
+            </form>
+        </div>
+    </div>
+
     <div class="ms-2 p-2">
         <h6 class="fw-bold"><a th:href="@{/home}" style="color: #5FB92E;">Home</a> > Comunidad</h6>
     </div>
-  <div class="subir d-flex justify-content-end">
-            <a class="btn btn-success" th:href="@{/subirPublicacion}">Subir Publicacion</a>
-        </div>
-    <div class="container my-5" style="min-height: 60vh;">
-        <h2 class="text-center fw-bold mb-3">Publicaciones de la Comunidad</h2>
-        <div th:if="${#lists.isEmpty(publicaciones)}" class="container mx-3 my-3">
-            <h4 class="text-center text-warning fw-bold my-2">No ahi publicaciones disponibles.</h4>
-        </div> 
-        <div th:each="publicacion : ${publicaciones}" class="post-card mb-4">
-            <div class="post-header">
-                 <img  th:src="@{'/img/' + ${publicacion.usuario.imagen}}" alt="avatar-perfil" width="50" height="50">
-                <div>
-                    <a th:href="@{/perfilComunidad/{id}(id=${publicacion.usuario.id})}">
-                        <h5 class="m-0 fw-bold" th:text="${publicacion.usuario.nombre}"></h5>
-                    </a>
-                    <small class="text-muted" th:text="${publicacion.fechaFormateada}"></small>
-                </div>
-            </div>
-            <img class="post-image" th:src="@{'/img/publicaciones/' + ${publicacion.rutaImagen}}" alt="imagen-publicacion">
-            <div class="post-content">
-                <p th:text="${publicacion.texto}"></p>
-                <div class="post-actions">
-                    <form th:action="@{/quitarMeGusta}" method="post" th:if="${likes[publicacion.id]}">
-                        <input type="hidden" name="publicacionId" th:value="${publicacion.id}">
-                        <button type="submit" class="btn btn-warning" data-bs-toggle="tooltip" data-bs-html="true" th:attr="data-bs-title=${likesList[publicacion.id]}">Quitar Me gusta</button>
-                    </form>
-                    <form th:action="@{/darMeGusta}" method="post" th:unless="${likes[publicacion.id]}">
-                        <input type="hidden" name="publicacionId" th:value="${publicacion.id}">
-                        <button type="submit" class="btn btn-success" data-bs-toggle="tooltip" data-bs-html="true" th:attr="data-bs-title=${likesList[publicacion.id]}">Dar Me gusta</button>
-                    </form>
-                </div>
-            </div>
-        </div>
 
-    </div>
+    <main class="container my-5 position-relative">
+        <div class="d-flex justify-content-between align-items-center mb-3">
+            <h2 class="fw-bold">Publicaciones de la Comunidad</h2>
+            <form class="d-flex" th:action="@{/buscarPublicacion}" method="get">
+                <input class="form-control me-2" type="busqueda" name="busqueda" placeholder="Buscar por titulo..." aria-label="Buscar">
+                <button class="btn btn-warning" type="submit">Buscar</button>
+            </form>
+        </div> 
+        <div th:if="${#lists.isEmpty(publicaciones)}" class="container mx-3 my-3">
+            <h4 class="text-center text-muted fw-bold p-5">No hay publicaciones disponibles.</h4>
+        </div>
+        <div th:if="${noEncontrado}">
+            <h4 class="text-center text-muted fw-bold p-5" th:text="${noEncontrado}"></h4>
+        </div>
+        <div th:each="publicacion : ${publicaciones}" class="post-card mb-4 p-3 border border-3 border-muted rounded">
+            <div class="m-5">
+                <div class="d-flex align-items-center mb-3">
+                    <img th:src="@{'/img/' + ${publicacion.usuario.imagen}}" alt="avatar-perfil" width="50" height="50" class="me-2 rounded-circle">
+                    <div>
+                        <a th:href="@{/perfilComunidad/{id}(id=${publicacion.usuario.id})}">
+                            <h5 class="m-0 fw-bold" th:text="${publicacion.usuario.nombre}"></h5>
+                        </a>
+                        <small class="text-muted" th:text="${publicacion.fechaFormateada}"></small>
+                    </div>
+                </div>
+                <div class="post-content mb-3">
+                    <h3 th:text="${publicacion.titulo}" class="fw-bold"></h3>
+                    <img class="img-fluid mb-2" th:src="@{'/img/publicaciones/' + ${publicacion.img}}" alt="imagen-publicacion">
+                    <p th:text="${publicacion.contenido}"></p>
+                </div>
+                <div class="ms-auto">
+                    <div class="post-actions mb-3">
+                        <form th:action="@{/darMeGusta}" method="post" th:unless="${likes[publicacion.id]}">
+                            <input type="hidden" name="idPublicacion" th:value="${publicacion.id}">
+                            <button type="submit" class="btn" data-bs-toggle="tooltip" data-bs-html="true" th:attr="data-bs-title=${likesLista[publicacion.id]}">
+                                <span class="material-icons icon-like">thumb_up</span>
+                            </button>
+                        </form>
+                        <form th:action="@{/quitarMeGusta}" method="post" th:if="${likes[publicacion.id]}">
+                            <input type="hidden" name="idPublicacion" th:value="${publicacion.id}">
+                            <button type="submit" class="btn" data-bs-toggle="tooltip" data-bs-html="true" th:attr="data-bs-title=${likesLista[publicacion.id]}">
+                                <span class="material-icons icon-like active">thumb_up</span>
+                            </button>
+                        </form>
+                    </div>
+                </div>
+                <div class="post-responses">
+                    <h4 class="fw-bold">Respuestas:</h4>
+                    <div th:each="respuesta : ${respuestas[publicacion.id]}">
+                        <div class="response mb-2 p-2 border rounded">
+                            <div class="d-flex align-items-center">
+                                <img th:src="@{'/img/' + ${respuesta.usuario.imagen}}" alt="avatar-perfil" width="30" height="30" class="me-2 rounded-circle">
+                                <div>
+                                    <a th:href="@{/perfilComunidad/{id}(id=${respuesta.usuario.id})}">
+                                        <h6 class="m-0 fw-bold" th:text="${respuesta.usuario.nombre}"></h6>
+                                    </a>
+                                    <small class="text-muted" th:text="${respuesta.fechaFormateada}"></small>
+                                </div>
+                            </div>
+                            <p class="my-2" th:text="${respuesta.contenido}"></p>
+                        </div>
+                    </div>
+                </div>
+                <form th:action="@{/guardarRespuesta}" method="post" th:object="${nuevaRespuesta}" class="mt-3">
+                    <input type="hidden" name="idPublicacion" th:value="${publicacion.id}">
+                    <input type="hidden" name="busquedaRespuesta" th:value="${#strings.isEmpty(param.busqueda) ? '' : param.busqueda}" />
+                    <div class="input-group">
+                        <input type="text" class="form-control" th:field="*{contenido}" placeholder="Escribe una respuesta..." required>
+                        <button class="btn btn-success" type="submit">Responder</button>
+                    </div>
+                </form>
+            </div>
+        </div>    
+        <button class="btn btn-warning position-fixed end-0 bottom-0 mb-3 me-3" type="button" data-bs-toggle="offcanvas" data-bs-target="#subirPublicacion">Subir Publicacion</button>
+    </main>
 
     <div th:replace="footer :: footer"></div>
 
@@ -126,20 +195,6 @@
                 return new bootstrap.Tooltip(tooltipTriggerEl);
             });
         });
-
-            window.addEventListener('scroll', function() {
-                var footer = document.querySelector('footer');
-                var button = document.querySelector('.subir');
-                var footerRect = footer.getBoundingClientRect();
-                var buttonRect = button.getBoundingClientRect();
-
-                if (footerRect.top < window.innerHeight) {
-                    button.style.bottom = (window.innerHeight - footerRect.top + 20) + 'px';
-                } else {
-                    button.style.bottom = '20px';
-                }
-            });
-
     </script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
