--- a/src/main/webapp/WEB-INF/views/thymeleaf/perfilComunidad.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/perfilComunidad.html
@@ -10,11 +10,24 @@
     <!--bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 
+    <!--google-icons-->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
     <!--google-fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
+
+    <style>
+        .icon-follow {
+            color: gray;
+        }
+
+        .icon-follow.active {
+            color: orange;
+        }
+    </style>
 
 </head>
 <body>
@@ -41,42 +54,46 @@
         <h6 class="fw-bold"><a th:href="@{/home}" style="color: #5FB92E;">Home</a> > <a th:href="@{/comunidad}" style="color: #5FB92E">Comunidad</a> > Perfil de <span th:text="${usuarioComunidad.nombre}"></span></h6>
     </div>
 
-    <div class="container my-5" style="min-height: 60vh;">
-        <h2 class="text-center fw-bold">Perfil de <span th:text="${usuarioComunidad.nombre}"></span></h2>
+    <main class="container my-5">
+        <h2 class="fw-bold">Perfil de <span th:text="${usuarioComunidad.nombre}"></span></h2>
         <div class="row d-flex align-items-center">
-            <div class="col-sm-4 d-flex flex-column justify-content-center my-3">
-                <img class="img-fluid" th:src="@{'/img/' + ${usuarioComunidad.imagen}}" alt="avatar-perfil">
-            </div>
-            <div class="col-sm-8">
-                <div class="card border border-1 border-dark rounded" th:style="'background-image: url(\'' + @{/img/background.png} + '\'); background-size: cover;'">
+            <div class="col-md-8">
+                <div class="card border border-3 border-muted rounded" th:style="'background-image: url(\'' + @{/img/background.png} + '\'); background-size: cover;'">
                     <div class="card-body">
                         <h4 class="card-title fw-bold" th:text="${usuarioComunidad.email}"></h4>
-                        <p class="card-text fw-bold">Edad: <span th:text="${usuarioComunidad.edad}+' anios'"></span></p>
-                        <p class="card-text fw-bold">Genero: <span th:text="${usuarioComunidad.genero}"></span></p>
-                        <p class="card-text fw-bold">Altura: <span th:text="${usuarioComunidad.altura}+' cm'"></span></p>
-                        <p class="card-text fw-bold">Peso: <span th:text="${usuarioComunidad.peso}+' kg'"></span></p>
-                        <p class="card-text fw-bold">Peso Meta: <span th:text="${usuarioComunidad.metaAlcanzarPeso}+' kg'"></span></p>
-                        <p class="card-text fw-bold">Nivel de Actividad Fisica: <span th:text="${usuarioComunidad.nivelDeActividad}"></span></p>
+                        <p class="card-text fw-bold">Edad &raquo; <span th:text="${usuarioComunidad.edad}+' anios'"></span></p>
+                        <p class="card-text fw-bold">Genero &raquo; <span th:text="${usuarioComunidad.genero}"></span></p>
+                        <p class="card-text fw-bold">Altura &raquo; <span th:text="${usuarioComunidad.altura}+' cm'"></span></p>
+                        <p class="card-text fw-bold">Peso &raquo; <span th:text="${usuarioComunidad.peso}+' kg'"></span></p>
+                        <p class="card-text fw-bold">Peso Meta &raquo; <span th:text="${usuarioComunidad.metaAlcanzarPeso}+' kg'"></span></p>
+                        <p class="card-text fw-bold">Nivel de Actividad Fisica &raquo; <span th:text="${usuarioComunidad.nivelDeActividad}"></span></p>
                         <div class="row d-flex align-items-center">
-                            <div class="col-2">
+                            <div class="col-1">
                                 <form th:action="@{/dejarDeSeguir}" method="post" th:object="${usuarioComunidad}" th:if="${follow != null}">
-                                    <input type="hidden" name="usuarioId" th:value="${usuarioComunidad.id}" />
-                                    <button type="submit" class="btn btn-warning" >Siguiendo</button>
+                                    <input type="hidden" name="idUsuario" th:value="${usuarioComunidad.id}" />
+                                    <button type="submit" class="btn">
+                                        <span class="material-icons icon-follow active">person_add</span>
+                                    </button>
                                 </form> 
                                 <form th:action="@{/seguir}" method="post" th:object="${usuarioComunidad}" th:if="${follow == null}">
-                                    <input type="hidden" name="usuarioId" th:value="${usuarioComunidad.id}" />
-                                    <button type="submit" class="btn btn-success" >Seguir</button>
-                                </form>                                
+                                    <input type="hidden" name="idUsuario" th:value="${usuarioComunidad.id}" />
+                                    <button type="submit" class="btn">
+                                        <span class="material-icons icon-follow">person_add</span>
+                                    </button>
+                                </form>  
                             </div>
-                            <div class="col-10">
-                                <a class="btn btn-success" th:href="@{/publicacionesUsuario/{id}(id=${usuarioComunidad.id})}">Ver Publicaciones</a>                                  
+                            <div class="col-11">
+                                <a class="btn btn-dark" th:href="@{/publicacionesUsuario/{id}(id=${usuarioComunidad.id})}">Ver Publicaciones</a>                                  
                             </div>         
                         </div>
                     </div>
                 </div>
             </div>
+            <div class="col-md-4 d-flex flex-column justify-content-center my-3">
+                <img class="img-fluid rounded-circle" th:src="@{'/img/' + ${usuarioComunidad.imagen}}" alt="avatar-perfil">
+            </div>
         </div>
-    </div>
+    </main>
 
     <div th:replace="footer :: footer"></div>
 
