--- a/src/main/webapp/WEB-INF/views/thymeleaf/home.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/home.html
@@ -19,6 +19,7 @@
     <div class="bodyContainer">
         <div class="container">
             <h2 class="section-title">Opciones del Menú</h2>
+            <span th:text="${a}"></span>
             <div class="card-container">
                 <div class="card">
                     <a th:href="@{/actividadesFisicas}">
