--- a/src/main/webapp/WEB-INF/views/thymeleaf/ejercicio.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/ejercicio.html
@@ -43,12 +43,12 @@
                 <div class="form-row">
                     <div class="form-group col-md-4">
                         <label for="fecha">Fecha:</label>
-                      <input type="date" class="form-control" id="fecha" name="fecha" placeholder="Fecha" >
+                      <input type="date" class="form-control" id="fecha" name="fecha" placeholder="Fecha" required>
                     </div>
                 </div>
                 <div class="form-group">
                     <label for="minutos">Tiempo empleado (minutos):</label>
-                    <input type="Integer" class="form-control" id="minutos" name="minutos" placeholder="Minutos" min="0">
+                    <input type="Integer" class="form-control" id="minutos" name="minutos" placeholder="Minutos" min="0" required>
                 </div>
                 <button type="submit" class="btn btn-primary">Guardar</button>
                 <button type="button" class="btn btn-secondary" th:href="@{actividadesFisicas}">Cancelar</button>
