--- a/src/main/webapp/WEB-INF/views/thymeleaf/comunidad.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/comunidad.html
@@ -109,7 +109,7 @@
                     <label for="contenido" class="text-muted">Ingresar Contenido</label>
                 </div>
                 <div class="mb-3">
-                    <label class="form-label fw-bold" for="foto">Cargar Imagen</label>
+                    <label class="form-label fw-bold" for="imagen">Cargar Imagen</label>
                     <input class="form-control form-contrl-sm" type="file" name="imagen" id="imagen">
                 </div>   
                 <div class="mb-2 d-flex justify-content-center align-items-center">
@@ -203,8 +203,27 @@
                     </div>
                 </form>
             </div>
-        </div>    
+        </div>
         <button class="btn btn-warning subir" type="button" data-bs-toggle="offcanvas" data-bs-target="#subirPublicacion">Subir Publicacion</button>
+        <hr>
+        <h2 class="text-center fw-bold mb-3">Desafíos Disponibles</h2>
+        <a id="button" th:href="@{/desafiosUsuario/{id}(id=${usuario.id})}"  class="btn btn-primary">Ver Desafios</a>
+        <div th:if="${#lists.isEmpty(desafios)}" class="container mx-3 my-3">
+            <h4 class="text-center text-warning fw-bold my-2">No hay desafíos disponibles en este momento.</h4>
+        </div>
+        <div th:each="desafio : ${desafios}" class="card mb-4">
+            <div class="card-header">
+                <h5 class="card-title" th:text="${desafio.nombre}"></h5>
+            </div>
+            <div class="card-body">
+                <p class="card-text" th:text="${desafio.descripcion}"></p>
+                <form th:action="@{/unirseDesafio}" method="post" onsubmit="return toggleButtons(this)">
+                    <input type="hidden" name="desafioId" th:value="${desafio.id}">
+                    <button type="submit" class="btn btn-primary" id="btnUnirse-${desafio.id}">Unirse al desafío</button>
+
+                </form>
+            </div>
+        </div>
     </main>
 
     <div th:replace="footer :: footer"></div>
@@ -228,6 +247,16 @@
                 }
             });
         });
+        function toggleButtons(form) {
+            const desafioId = form.querySelector('input[name="desafioId"]').value;
+            const btnUnirse = document.getElementById(`btnUnirse-${desafioId}`);
+            const btnVer = document.getElementById(`button`);
+
+            btnUnirse.style.display = 'none';
+            btnVer.style.display = 'inline-block';
+
+            return true;
+        }
     </script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
