--- a/src/main/webapp/WEB-INF/views/thymeleaf/perfilComunidad.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/perfilComunidad.html
@@ -83,7 +83,8 @@
                                 </form>  
                             </div>
                             <div class="col-11">
-                                <a class="btn btn-dark" th:href="@{/publicacionesUsuario/{id}(id=${usuarioComunidad.id})}">Ver Publicaciones</a>                                  
+                                <a class="btn btn-dark" th:href="@{/publicacionesUsuario/{id}(id=${usuarioComunidad.id})}">Ver Publicaciones</a>
+                                <a class="btn btn-success" th:href="@{/desafiosUsuario/{id}(id=${usuarioComunidad.id})}">Ver Desafios</a>
                             </div>         
                         </div>
                     </div>
